# Bug-Triage-Agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  improvement.md  pyproject.toml
.codex/: config.toml
bta/ai/: parsers.py  patching.py  reasoning.py  retrieval.py  verification.py
bta/cli/: __init__.py  app.py  main.py
bta/cli/commands/: __init__.py  base.py  config.py  status.py  version.py
bta/config/: __init__.py  constants.py  logging.py  settings.py
bta/domain/: __init__.py  analysis_run.py  duplicate_group.py  evidence_pack.py  hypothesis.py  patch_draft.py  pr_draft.py  shared.py  triage_case.py  validation_result.py
bta/github/: service.py
bta/prompts/: __init__.py  patch_generation_v1.j2  reasoning_hypotheses_v1.j2
bta/services/: analyze.py  container.py  dedupe.py  eval.py  exceptions.py  factory.py  fix.py  models.py  pr.py  scan.py  status.py  unit_of_work.py
bta/storage/: __init__.py  artifact_store.py  cache.py  database.py  models.py  vector_store.py
docs/: BuildOrder.md  CoreDomainModels.md  DatabaseSchema.md  ProjectStructure.md  SystemArchitecture.md  WorkflowStateMachine.md  readme-codex.md
migrations/: env.py
migrations/versions/: 0001_extensions.py  0002_storage_schema.py  0003_vector_indexes.py
tests/integration/storage/: test_postgres_storage.py
tests/unit/ai/: test_parsers.py  test_patching.py  test_reasoning.py  test_retrieval.py  test_verification.py
tests/unit/cli/: test_cli_foundation.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_analysis_pr.py  (+6 more)
(+9 files in other folders)
